# Arrhenius_FEM_CZM_MPZ

./: .gitignore  .v91_materialize_trigger  AUDIT_V10_0_2_PROGRESSIVE_INTEGRATION.md  AUDIT_V9_11_FULL_2D_INTEGRATION.md  AUDIT_V9_12_FULL_FEM_AND_TRANSFER.md  CHANGELOG_MPZ_V9_0.md  CHANGELOG_MPZ_V9_1.md  CHANGELOG_MPZ_V9_2.md  CHANGELOG_MPZ_V9_3.md  CHANGELOG_MPZ_V9_4.md  CHANGELOG_MPZ_V9_5.md  CHANGELOG_MPZ_V9_6.md  FEATURE_PRESERVATION_V9_0.md  IMPLEMENTATION_STATUS_V9_0.md  IMPLEMENTATION_STATUS_V9_1.md  IMPLEMENTATION_STATUS_V9_3.md  PACKAGE_SHA256SUMS.txt  README.md  README_500K_FIVE_SEEDED_R_CURVES.md  README_CZM_300K_ORIENTATION_BRANCHING_MULTISEED.md  README_FEM_CZM.md  README_FEM_CZM_FATIGUE_300K.md  README_MIXED_MODE_FEM_CZM_V1.md  README_MIXED_MODE_FEM_CZM_V2.md  README_MIXED_MODE_FEM_CZM_V3_1.md  README_MIXED_MODE_FEM_CZM_V3_2.md  README_MIXED_MODE_FEM_CZM_V3_3.md  README_MIXED_MODE_FEM_CZM_V4.md  README_MIXED_MODE_FEM_CZM_V5.md  README_MIXED_MODE_FEM_CZM_V6.md  README_MONITOR_MIXED_MODE_FEM_CZM_V2_1.md  README_MPZ_V9_0.md  README_MPZ_V9_10_1_SHARED_SHAPE.md  README_MPZ_V9_10_2_INDEPENDENT_SHAPES.md  README_MPZ_V9_10_3_DBTT_TARGETED.md  README_MPZ_V9_10_4_3_DYNAMIC_DBTT.md  README_MPZ_V9_10_4_7_ANALYTICAL_DOWNSELECT.md  README_MPZ_V9_10_4_NARROW_DBTT.md  README_MPZ_V9_10_4_QUALITY_DIVERSITY.md  README_MPZ_V9_10_UNIFIED_SEARCH.md  (+434 more)
legacy_first_passage_v8/: FEM_CZM_ARCHITECTURE.md  README_CZM_300K_ORIENTATION_BRANCHING_SWEEP.md  README_CZM_THREE_RATE_ANALYTIC_COMPARISON.md  README_FOUR_CLASS_RATE_SWEEP.md  README_LEGACY_FREEZE.md  README_MIXED_MODE_FEM_CZM_V3.md  README_MIXED_MODE_FEM_CZM_V3_4.md  README_MIXED_MODE_FEM_CZM_V3_5.md  README_MIXED_MODE_FEM_CZM_V7.md  README_MIXED_MODE_FEM_CZM_V8.md  README_SAVED_RCURVE_ANALYSIS.md  README_V3.md  README_V8_1_VERIFIER_FIX.md  SHA256SUMS.txt  V2_700_PAIR_DIAGNOSIS_AND_V3_CHANGES.md  VALIDATION.md  VALIDATION_MIXED_MODE_FEM_CZM_V6.md  analyze_branch_sweep.py  analyze_branch_sweep_v2.py  analyze_fem_czm_fatigue_outputs.py  analyze_localJ_growth.py  analyze_saved_Rcurves.py  analyze_sn_pf2d_staged_events_v2.py  analyze_strength_fatigue_correlation.py  build_figure1_v1_atlas_first_pass.py  build_panelC_SN_nucleation_waterfall_3d_fixed.py  build_panels_CD_entropy_family.py  build_panels_CD_entropy_family_v2.py  calibrate_mixed_mode_loading_v1.py  calibrate_mixed_mode_loading_v2.py  calibrate_mixed_mode_loading_v3_1.py  calibrate_mixed_mode_loading_v3_2.py  calibrate_mixed_mode_loading_v3_5.py  calibrate_mixed_mode_loading_v5.py  calibrate_mixed_mode_loading_v6.py  estimate_resolution_convergence.py  monitor_mixed_mode_fem_czm_v2_1.sh  overnight_sweep.sh  patch_cleave_exp.py  patch_compare.py  (+114 more)
legacy_first_passage_v8/arrhenius_fracture/: AT2_OVERLAY_RUN.md  INTRODUCTION_UPDATE.md  (+32 more)
(+502 files in other folders)
