[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arrhenius-fem-czm"
version = "10.0.5.14.5"
description = "Full 2-D Arrhenius FEM/CZM with PF persistent sites, signed-kernel family parity, asymptotic-preserving low-temperature MPZ transport, and supported adaptive-CZM tip topology"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[tool.setuptools.packages.find]
include = ["arrhenius_fracture*"]

[tool.setuptools.package-data]
arrhenius_fracture = [
  "data/mpz_v9_11_1/*.json",
  "data/mpz_v10_0_5_14/*.csv",
  "data/mpz_v10_0_5_14/*.json",
]
