[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arrhenius-fem-czm"
version = "0.1.0"
description = "Arrhenius hazard-based fracture and fatigue FEM with replaceable sharp-wake and discrete-CZM crack backends"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "pandas>=2.0",
]

[tool.setuptools.packages.find]
include = ["arrhenius_fracture*"]
